--- a/src/sections/experiences/freelance.astro
+++ b/src/sections/experiences/freelance.astro
@@ -12,10 +12,9 @@
             <p class="text-2xl font-semibold text-secondary">Freelance</p>
             <p class="text-lg font-medium text-secondary">Desarrollo Web y movil</p>
             <p class="mt-2 text-neutral">
-                Responsable de la plataforma, componentes y utilidades para la creación y desarrollo de
-                aplicaciones web. Mejora de un 30% en la entrega de software.
-                Implantación de medidas de integración continua y despliegue con A/B testing en más de
-                15 equipos.
+                Durante todos estos años he trabajado en proyectos escolares y proyectos personal
+                para seguir aprendiendo y seguir desarrollando mis habilidades, muchas de estas eran webs o aplicaciones
+                móviles en los de que me encargaba del desarrollo por completo.
             </p>
         </div>
         <div class="w-48 h-16">
