--- a/src/sections/projects.astro
+++ b/src/sections/projects.astro
@@ -24,26 +24,24 @@ import Section from "../components/section.astro";
             <div class="w-full md:w-1/2 flex flex-col gap-4 justify-between">
                 <div class="flex flex-row justify-between flex-wrap">
                     <div class="flex flex-row items-center gap-5">
-                        <img src="/dist/logos/adarlpz_logo.svg" width="50px" alt="Logo"/>
-                        <p class="text-3xl font-semibold text-white">Densora</p>
+                        <img src="/dist/logos/adardev_logo.svg" width="50px" alt="Logo"/>
+                        <p class="text-3xl font-semibold text-white">Spotify</p>
                     </div>
                     <div class="flex flex-row mt-4 sm:mt-0">
                         <div class="flex flex-row gap-2">
-                            <img src="/dist/logos/android_logo.svg" width="30px" alt="Android"/>
-                            <img src="/dist/logos/iOS_logo.svg" width="30px" alt="iOS"/>
+                            <img src="/dist/icons/web_icon.svg" width="30px" alt="Android"/>
                         </div>
                         <div class="w-[2px] h-auto rounded-2xl bg-white mx-4"></div>
                         <div class="flex flex-row gap-2">
-                            <img src="/dist/logos/nodejs_logo.svg" width="30px" alt="NodeJS"/>
+                            <img src="/dist/logos/astro_logo.svg" width="30px" alt="NodeJS"/>
                             <img src="/dist/logos/tailwind_logo.svg" width="30px" alt="Tailwind"/>
-                            <img src="/dist/logos/csharp_logo.svg" width="30px" alt="C#"/>
                         </div>
                     </div>
                 </div>
 
                 <p class="text-white text-justify text-lg">
-                    Plataforma completa para gestión de citas y entregas en el sector odontológico. Disponible en
-                    Android, iOS y web.
+                    Aplicación que muestra estadísticas personalizadas sobre tus hábitos de escucha en Spotify y te
+                    conecta con personas con gustos musicales similares.
                 </p>
 
                 <div class="flex justify-between">
@@ -71,8 +69,8 @@ import Section from "../components/section.astro";
             <div class="w-full md:w-1/2 flex flex-col gap-4 justify-between">
                 <div class="flex flex-row justify-between flex-wrap">
                     <div class="flex flex-row items-center gap-5">
-                        <img src="/dist/logos/adarlpz_logo.svg" width="50px" alt="Logo"/>
-                        <p class="text-3xl font-semibold text-white">Tekkure</p>
+                        <img src="/dist/logos/adardev_logo.svg" width="50px" alt="Logo"/>
+                        <p class="text-3xl font-semibold text-white">Bytemana</p>
                     </div>
                     <div class="flex flex-row mt-4 sm:mt-0">
                         <div class="flex flex-row gap-2">
@@ -80,16 +78,16 @@ import Section from "../components/section.astro";
                         </div>
                         <div class="w-[2px] h-auto rounded-2xl bg-white mx-4"></div>
                         <div class="flex flex-row gap-2">
-                            <img src="/dist/logos/c++_logo.svg" width="30px" alt="C++"/>
-                            <img src="/dist/logos/astro_logo.svg" width="30px" alt="Astro"/>
-                            <img src="/dist/logos/react_logo.svg" width="30px" alt="React"/>
+                            <img src="/dist/logos/php_logo.svg" width="30px" alt="C++"/>
+                            <img src="/dist/logos/electron_logo.svg" width="30px" alt="Astro"/>
+                            <img src="/dist/logos/sql_logo.svg" width="30px" alt="React"/>
                         </div>
                     </div>
                 </div>
 
                 <p class="text-white text-justify text-lg">
-                    Aplicación híbrida de escritorio y web para gestión de hardware especializado con sincronización en
-                    tiempo real.
+                    Sistema utilizado en un minisúper para la gestión de productos, usuarios y recursos en el almacén.
+                    Desarrollado con tecnologías web y empaquetado con Electron.
                 </p>
 
                 <div class="flex justify-between">
