--- a/src/sections/about.astro
+++ b/src/sections/about.astro
@@ -10,8 +10,9 @@ import Section from "../components/section.astro";
             title="Sobre Mi"
     />
     <div>
-        <p class="text-2xl font-medium !m-0 text-[#41766c]">Developer in training, with no professional experience but a
-            great passion for programming and technology. Motivated by my learning, eager to grow and contribute my
-            knowledge to innovative projects.</p>
+        <p class="text-2xl font-medium !m-0 text-[#41766c]">
+            Desarrollador en formación, sin experiencia profesional pero con una gran pasión por la programación y la
+            tecnología.
+            Motivado por el aprendizaje, con ganas de crecer y aportar mis conocimientos a proyectos innovadores.
     </div>
 </Section>
