correccion de link de linkedIn

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,8 +40,8 @@ import ButtonExpand from "../components/buttonExpand.astro";
             <ButtonExpand
                     link="https://www.linkedin.com/in/adardev"
                     iconSrc="/dist/logos/linkedin_logo.svg"
-                    label="/adardev"
-                    hoverClass="hover:w-[7.2rem]"
+                    label="/in/adardev"
+                    hoverClass="hover:w-[8.3rem]"
             />
             <ButtonExpand
                     link="mailto:adarlopz.dev@gmail.com"
