--- a/src/sections/skills.astro
+++ b/src/sections/skills.astro
@@ -3,12 +3,7 @@ import TitleSection from "../components/titleSection.astro";
 import Section from "../components/section.astro";
 ---
 <Section id="skills">
-    <TitleSection
-            imageSrc="/dist/icons/portfolio_icon.svg"
-            imageAlt="Ícono de perfil"
-            title="Habilidades"
-    />
-
+    <TitleSection imageSrc="/dist/icons/portfolio_icon.svg" imageAlt="Ícono de perfil" title="Habilidades"/>
     <div class="flex flex-row justify-center">
         <div class="flex flex-row bg-[#002a2e] m-8 mx-0 mt-0 p-4 gap-4 rounded-tl-3xl rounded-bl-3xl">
             <a class="group [perspective:1000px] cursor-pointer">
@@ -95,8 +90,6 @@ import Section from "../components/section.astro";
             </a>
         </div>
     </div>
-
-
     <div class="flex flex-row justify-center ml-8">
         <div class="flex flex-row bg-[#002a2e] m-8 mx-0 my-0 p-4 gap-4 rounded-tl-3xl">
             <a class="group [perspective:1000px] cursor-pointer">
@@ -438,5 +431,4 @@ import Section from "../components/section.astro";
             </a>
         </div>
     </div>
-
 </Section>
