--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,6 @@
 import '../styles/global.css';
 import {ClientRouter} from 'astro:transitions';
 ---
-
 <html class="bg-background h-full flex flex-col scroll-smooth" lang="en">
 <head>
     <meta charset="UTF-8"/>
@@ -10,15 +9,12 @@ import {ClientRouter} from 'astro:transitions';
     <link rel="icon" href="/dist/logos/tekkure_logo.svg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alata&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-          rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Alata&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta name="generator" content={Astro.generator}/>
-    <title>adarlpz</title>
+    <title>adardev</title>
     <ClientRouter/>
 </head>
 <body class="bg-background min-h-screen flex flex-col scroll-smooth">
-
 <header class="fixed top-0 left-0 w-full z-50 bg-background flex flex-row justify-between items-center px-[20rem] py-5">
     <div>
         <a href="/">
@@ -42,24 +38,18 @@ import {ClientRouter} from 'astro:transitions';
             <p class="text-xl font-bold !m-0 text-secondary">Habilidades</p>
         </a>
     </div>
-
     <a href="/" class="relative w-12 h-12 group  overflow-visible pt-3">
         <div class="rounded-2xl p-3 transition duration-200 relative z-0">
             <img src="/dist/flags/mexico_flag.svg" alt="Bandera de México" class="absolute top-0 left-0 w-full h-full object-cover transition-opacity duration-300 opacity-100 group-hover:opacity-0"/>
-
             <img src="/dist/flags/unitedkingdom_flag.svg" alt="Bandera de United Kingdom" class="absolute top-0 left-0 w-full h-full object-cover transition-opacity duration-300 opacity-0 group-hover:opacity-100"/>
         </div>
         <p class="absolute top-full left-1/2 -translate-x-1/2 mt-1 px-2 py-1 text-sm font-semibold bg-backgroundPrimary text-[#15a4a2] rounded shadow opacity-0 group-hover:opacity-100 transition duration-200 whitespace-nowrap z-10">
             Cambiar idioma
         </p>
     </a>
-
-
 </header>
-
 <main class="pt-[5.5rem] flex flex-col mx-[20rem]">
     <slot/>
 </main>
-
 </body>
 </html>
