--- a/src/sections/experience.astro
+++ b/src/sections/experience.astro
@@ -1,16 +1,10 @@
 ---
-import Epam from "./experiences/epam.astro";
 import Freelance from "./experiences/freelance.astro";
 import TitleSection from "../components/titleSection.astro";
 import Section from "../components/section.astro";
 ---
-
 <Section id="experience">
-    <TitleSection
-            imageSrc="/dist/icons/portfolio_icon.svg"
-            imageAlt="Ícono de perfil"
-            title="Experiencia"
-    />
+    <TitleSection imageSrc="/dist/icons/portfolio_icon.svg" imageAlt="Ícono de perfil" title="Experiencia"/>
     <div class="container mx-auto">
         <div class="relative border-l-4 border-primary ml-5">
             <Freelance/>
