--- a/src/sections/experiences/freelance.astro
+++ b/src/sections/experiences/freelance.astro
@@ -1,9 +1,6 @@
 <div class="relative pl-16 group">
     <div class="absolute left-[-0.6rem] top-[0.5rem] z-20">
-        <div class="w-4 h-4 bg-primary rounded-full flex items-center justify-center text-xs font-semibold text-transparent
-                    transition-all duration-500 ease-in-out
-                    group-hover:w-16 group-hover:h-7
-                    group-hover:text-white group-hover:bg-primary group-hover:shadow-md">
+        <div class="w-4 h-4 bg-primary rounded-full flex items-center justify-center text-xs font-semibold text-transparent transition-all duration-500 ease-in-out group-hover:w-16 group-hover:h-7 group-hover:text-white group-hover:bg-primary group-hover:shadow-md">
             2022
         </div>
     </div>
