--- a/src/Layouts/Layout.astro
+++ b/src/Layouts/Layout.astro
@@ -7,7 +7,7 @@ import {ClientRouter} from 'astro:transitions';
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="icon" href="../assets/logos/" type="image/x-icon">
+    <link rel="icon" href="../assets/logos/adardev_logo.svg">
     <meta name="generator" content={Astro.generator}/>
     <title>adardev</title>
     <ClientRouter/>
