--- a/src/components/subSection.astro
+++ b/src/components/subSection.astro
@@ -33,7 +33,7 @@ if(orientation == "row"){
     flexOrientation = "flex-col";
 }
 if (align == "center") {
-    alignment = "items-center"
+    alignment = "items-center justify-center"
 }
 if (align == "left") {
     alignment = "items-start"
