--- a/src/sections/skills.astro
+++ b/src/sections/skills.astro
@@ -1,6 +1,7 @@
 ---
 import TitleSection from "/src/components/titleSection.astro";
 import Section from "/src/components/section.astro";
+import Text from "/src/components/text.astro";
 ---
 <Section id="skills">
     <TitleSection imageSrc="/src/assets/icons/portfolio_icon.svg" imageAlt="Ícono de perfil" title="Habilidades"/>
@@ -14,7 +15,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-backgroundSecondary rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">C++</p>
+                        <Text text="C++" type="text" />
                     </div>
                 </div>
             </a>
@@ -28,7 +29,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">C#</p>
+                        <Text text="C#" type="text" />
                     </div>
                 </div>
             </a>
@@ -42,7 +43,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">Python</p>
+                        <Text text="Python" type="text" />
                     </div>
                 </div>
             </a>
@@ -56,7 +57,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">JavaScript</p>
+                        <Text text="JavaScript" type="text" />
                     </div>
                 </div>
             </a>
@@ -70,7 +71,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">PHP</p>
+                        <Text text="PHP" type="text" />
                     </div>
                 </div>
             </a>
@@ -84,7 +85,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">Dart</p>
+                        <Text text="Dart" type="text" />
                     </div>
                 </div>
             </a>
@@ -100,7 +101,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">Astro</p>
+                        <Text text="Astro" type="text" />
                     </div>
                 </div>
             </a>
@@ -114,7 +115,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">React</p>
+                        <Text text="React" type="text" />
                     </div>
                 </div>
             </a>
@@ -128,7 +129,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">Node.js</p>
+                        <Text text="Node.js" type="text" />
                     </div>
                 </div>
             </a>
@@ -142,7 +143,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">Electron</p>
+                        <Text text="Electron" type="text" />
                     </div>
                 </div>
             </a>
@@ -156,7 +157,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">Kotlin</p>
+                        <Text text="Kotlin" type="text" />
                     </div>
                 </div>
             </a>
@@ -170,7 +171,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">Java</p>
+                        <Text text="Java" type="text" />
                     </div>
                 </div>
             </a>
@@ -186,7 +187,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">Flutter</p>
+                        <Text text="Flutter" type="text" />
                     </div>
                 </div>
             </a>
@@ -200,7 +201,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">Django</p>
+                        <Text text="Django" type="text" />
                     </div>
                 </div>
             </a>
@@ -214,7 +215,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">HTML</p>
+                        <Text text="HTML" type="text" />
                     </div>
                 </div>
             </a>
@@ -228,7 +229,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">CSS</p>
+                        <Text text="CSS" type="text" />
                     </div>
                 </div>
             </a>
@@ -242,7 +243,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">Tailwind</p>
+                        <Text text="Tailwind" type="text" />
                     </div>
                 </div>
             </a>
@@ -256,7 +257,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">Bootstrap</p>
+                        <Text text="Bootstrap" type="text" />
                     </div>
                 </div>
             </a>
@@ -272,7 +273,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">SQL</p>
+                        <Text text="SQL" type="text" />
                     </div>
                 </div>
             </a>
@@ -286,7 +287,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">Supabase</p>
+                        <Text text="Supabase" type="text" />
                     </div>
                 </div>
             </a>
@@ -300,7 +301,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">Firebase</p>
+                        <Text text="Firebase" type="text" />
                     </div>
                 </div>
             </a>
@@ -314,7 +315,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">MongoDB</p>
+                        <Text text="MongoDB" type="text" />
                     </div>
                 </div>
             </a>
@@ -328,7 +329,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">Figma</p>
+                        <Text text="Figma" type="text" />
                     </div>
                 </div>
             </a>
@@ -342,7 +343,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">MockFlow</p>
+                        <Text text="MockFlow" type="text" />
                     </div>
                 </div>
             </a>
@@ -357,7 +358,7 @@ import Section from "/src/components/section.astro";
                         <img src="/src/assets/logos/git_logo.svg" class="w-16 h-16" alt="Angular Logo"/>
                     </div>
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">Git</p>
+                        <Text text="Git" type="text" />
                     </div>
                 </div>
             </a>
@@ -370,7 +371,7 @@ import Section from "/src/components/section.astro";
                         <img src="/src/assets/logos/docker_logo.svg" class="w-16 h-16" alt="Angular Logo"/>
                     </div>
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">Docker</p>
+                        <Text text="Docker" type="text" />
                     </div>
                 </div>
             </a>
@@ -383,7 +384,7 @@ import Section from "/src/components/section.astro";
                         <img src="/src/assets/logos/notion_logo.svg" class="w-16 h-16" alt="Angular Logo"/>
                     </div>
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">Notion</p>
+                        <Text text="Notion" type="text" />
                     </div>
                 </div>
             </a>
@@ -397,7 +398,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">Ilustrator</p>
+                        <Text text="Ilustrator" type="text" />
                     </div>
                 </div>
             </a>
@@ -411,7 +412,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">Photoshop</p>
+                        <Text text="Photoshop" type="text" />
                     </div>
                 </div>
             </a>
@@ -425,7 +426,7 @@ import Section from "/src/components/section.astro";
                     </div>
 
                     <div class="absolute inset-0 bg-[#003b41] rounded-2xl p-4 flex items-center justify-center [transform:rotateY(180deg)] [backface-visibility:hidden]">
-                        <p class="text-primary text-lg font-semibold">XD</p>
+                        <Text text="XD" type="text" />
                     </div>
                 </div>
             </a>
