--- a/src/sections/about.astro
+++ b/src/sections/about.astro
@@ -1,13 +1,11 @@
 ---
 import TitleSection from "/src/components/titleSection.astro";
 import Section from "/src/components/section.astro";
+import Text from "/src/components/text.astro";
 ---
 <Section id="about">
     <TitleSection imageSrc="/src/assets/icons/profile_icon.svg" imageAlt="Ícono de perfil" title="Sobre Mi"/>
     <div>
-        <p class="text-2xl font-medium !m-0 text-[#41766c]">
-            Desarrollador en formación, sin experiencia profesional pero con una gran pasión por la programación y la
-            tecnología.
-            Motivado por el aprendizaje, con ganas de crecer y aportar mis conocimientos a proyectos innovadores.
+        <Text text="Desarrollador en formación, sin experiencia profesional pero con una gran pasión por la programación y la tecnología. Motivado por el aprendizaje, con ganas de crecer y aportar mis conocimientos a proyectos innovadores." type="text" />
     </div>
 </Section>
