--- a/src/sections/projects.astro
+++ b/src/sections/projects.astro
@@ -1,6 +1,7 @@
 ---
 import TitleSection from "/src/components/titleSection.astro";
 import Section from "/src/components/section.astro";
+import Text from "/src/components/text.astro";
 ---
 <Section id="projects">
     <TitleSection imageSrc="/src/assets/icons/code_icon.svg" imageAlt="Ícono de perfil" title="Proyectos"/>
@@ -13,7 +14,7 @@ import Section from "/src/components/section.astro";
                 <div class="flex flex-row justify-between flex-wrap">
                     <div class="flex flex-row items-center gap-5">
                         <img src="/src/assets/logos/adardev_logo.svg" width="50px" alt="Logo"/>
-                        <p class="text-3xl font-semibold text-white">Spotify</p>
+                        <Text text="Spotify" type="title" />
                     </div>
                     <div class="flex flex-row mt-4 sm:mt-0">
                         <div class="flex flex-row gap-2">
@@ -26,18 +27,15 @@ import Section from "/src/components/section.astro";
                         </div>
                     </div>
                 </div>
-                <p class="text-white text-justify text-lg">
-                    Aplicación que muestra estadísticas personalizadas sobre tus hábitos de escucha en Spotify y te
-                    conecta con personas con gustos musicales similares.
-                </p>
+                <Text text="Aplicación que muestra estadísticas personalizadas sobre tus hábitos de escucha en Spotify y te conecta con personas con gustos musicales similares." type="text" />
                 <div class="flex justify-between">
                     <div class="flex bg-backgroundSecondary px-4 py-2 rounded-2xl gap-3 items-center cursor-pointer hover:brightness-150 transition-colors">
                         <img src="/src/assets/logos/github_logo.svg" width="25px" alt="GitHub"/>
-                        <p class="text-white font-semibold">Ver código</p>
+                        <Text text="Ver código" type="mini" />
                     </div>
                     <div class="flex bg-backgroundSecondary px-4 py-2 rounded-2xl gap-3 items-center cursor-pointer hover:brightness-150 transition-colors">
                         <img src="/src/assets/icons/web_icon.svg" class="w-[25px]" alt="Sitio Web"/>
-                        <p class="text-white font-semibold">Visitar</p>
+                        <Text text="Visitar" type="mini" />
                     </div>
                 </div>
             </div>
@@ -50,7 +48,7 @@ import Section from "/src/components/section.astro";
                 <div class="flex flex-row justify-between flex-wrap">
                     <div class="flex flex-row items-center gap-5">
                         <img src="/src/assets/logos/adardev_logo.svg" width="50px" alt="Logo"/>
-                        <p class="text-3xl font-semibold text-white">Bytemana</p>
+                        <Text text="Bytemana" type="title" />
                     </div>
                     <div class="flex flex-row mt-4 sm:mt-0">
                         <div class="flex flex-row gap-2">
@@ -64,18 +62,15 @@ import Section from "/src/components/section.astro";
                         </div>
                     </div>
                 </div>
-                <p class="text-white text-justify text-lg">
-                    Sistema utilizado en un minisúper para la gestión de productos, usuarios y recursos en el almacén.
-                    Desarrollado con tecnologías web y empaquetado con Electron.
-                </p>
+                <Text text="Sistema utilizado en un minisúper para la gestión de productos, usuarios y recursos en el almacén. Desarrollado con tecnologías web y empaquetado con Electron." type="text" />
                 <div class="flex justify-between">
                     <div class="flex bg-backgroundSecondary px-4 py-2 rounded-2xl gap-3 items-center cursor-pointer hover:brightness-150 transition-colors">
                         <img src="/src/assets/logos/github_logo.svg" width="25px" alt="GitHub"/>
-                        <p class="text-white font-semibold">Ver código</p>
+                        <Text text="Ver código" type="mini" />
                     </div>
                     <div class="flex bg-backgroundSecondary px-4 py-2 rounded-2xl gap-3 items-center cursor-pointer hover:brightness-150 transition-colors">
                         <img src="/src/assets/icons/web_icon.svg" class="w-[25px]" alt="Sitio Web"/>
-                        <p class="text-white font-semibold">Visitar</p>
+                        <Text text="Visitar" type="mini" />
                     </div>
                 </div>
             </div>
