--- a/src/sections/experience.astro
+++ b/src/sections/experience.astro
@@ -3,7 +3,7 @@ import Freelance from "./experiences/freelance.astro";
 import TitleSection from "/src/components/titleSection.astro";
 import Section from "/src/components/section.astro";
 ---
-<Section id="experience">
+<Section id="experience" mt="true" mb="true">
     <TitleSection imageSrc="/src/assets/icons/portfolio_icon.svg" imageAlt="Ícono de perfil" title="Experiencia"/>
     <div class="container mx-auto">
         <div class="relative border-l-4 border-primary ml-5">
