--- a/src/sections/projects.astro
+++ b/src/sections/projects.astro
@@ -3,7 +3,7 @@ import TitleSection from "/src/components/titleSection.astro";
 import Section from "/src/components/section.astro";
 import Text from "/src/components/text.astro";
 ---
-<Section id="projects">
+<Section id="projects" mt="true" mb="true">
     <TitleSection imageSrc="/src/assets/icons/code_icon.svg" imageAlt="Ícono de perfil" title="Proyectos"/>
     <div class="w-full max-w-[1400px] px-4 mx-auto flex flex-col gap-10 items-center justify-center">
         <div class="w-full bg-backgroundPrimary rounded-2xl p-5 flex flex-col md:flex-row gap-6 shadow-xl">
