--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,8 +13,7 @@ import Profile_Photo from "../assets/photos/profile_photo.jpg";
 
 ---
 <Layout align="center">
-
-    <Section>
+    <Section mt="true">
         <div class="flex flex-row gap-10 mb-8">
             <div class="w-24 h-20 rounded-full overflow-hidden shadow-lg">
                 <Image src={Profile_Photo} alt=""/>
